k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1

metadata:
  name: api-deployment
  namespace: api-ns
  labels:
    app: api-app

spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-app

  template:
    metadata:
      labels:
        app: api-app

    spec:
      containers:
      - name: api-container
        image: priyanshijat6701/comedy-server-app
        ports:
        - containerPort: 3100
        resources:
          requests:
            cpu: 100m
            memory: 256Mi

          limits:
            cpu: 200m
            memory: 512Mi
